test/bad/automatic/base/compile_time/0018.lat
int main() {
	int x = foo(1);
	return 0 ;
}

int foo(int y,int z) {
 return y;
}

